--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -1,77 +1,69 @@
 <table class="solvers">
   <thead>
     <tr>
-      <th width="23%"><strong>Modeling Tool</strong></th>
-      <th width="9%">LP</th>
-      <th width="9%">MILP</th>
-      <th width="9%">SOCP</th>
-      <th width="9%">MISOCP</th>
-      <th width="9%">SDP</th>
-      <th width="9%">NLP</th>
-      <th width="9%">MINLP</th>
-      <th>Other</th>
+      <th width="23%"></th>
+      <th></th>
+      <th colspan="2">Convex</th>
+      <th></th>
+      <th></th>
+    </tr>
+    <tr>
+      <th><strong>Modeling Tool</strong></th>
+      <th>Linear/Quadratic</th>
+      <th>Conic</th>
+      <th>Smooth</th>
+      <th>Nonconvex</th>
+      <th>Integer</th>
     </tr>
   </thead>
 
-  <tfoot> <!-- Must appear before tbody, see W3.org -->
+  <tfoot>
     <tr style="text-align: left">
       <td colspan="10">
         <small>
   <strong>Key:</strong>
   <ul style="list-style: none; margin-top: 5px; margin-bottom: 5px">
-          <li style="margin: 0.1em 0;">LP = <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a></li>
-          <li style="margin: 0.1em 0;">MILP = <a href="http://en.wikipedia.org/wiki/Integer_programming">Mixed Integer LP</a></li>
-          <li style="margin: 0.1em 0;">SOCP = <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order cone programming</a> (includes convex <a href="http://en.wikipedia.org/wiki/Quadratic_programming">QP</a>, <a href="http://en.wikipedia.org/wiki/Quadratically_constrained_quadratic_program">QCQP</a>)</li>
-          <li style="margin: 0.1em 0;">MISOCP = Mixed Integer SOCP</li>
-          <li style="margin: 0.1em 0;">SDP = <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a></li>
-          <li style="margin: 0.1em 0;">NLP = (constrained) <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a> (includes general <a href="http://en.wikipedia.org/wiki/Quadratic_programming">QP</a>, <a href="http://en.wikipedia.org/wiki/Quadratically_constrained_quadratic_program">QCQP</a>)</li>
-          <li style="margin: 0.1em 0;">MINLP = Mixed Integer NLP</li>
+          <li style="margin: 0.1em 0;">Linear/Quadratic = Supports <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a> possibly with the addition of quadratic objectives or constraints.</li>
+          <li style="margin: 0.1em 0;">Convex conic = Supports <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order Cone Programming</a> or <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a> or exponential cones.</li>
+          <li style="margin: 0.1em 0;">Convex smooth = Supports constrained derivative-based <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a> with convex constraints and objective functions</li>
+          <li style="margin: 0.1em 0;">Nonlinear = Supports general nonconvex nonlinear programming.</li>
+          <li style="margin: 0.1em 0;">Integer = Supports integer-constrained variables, e.g., <a href="https://en.wikipedia.org/wiki/Integer_programming">Integer Programming</a>.</li>
         </ul>
+        <!--
         <strong>Notes:</strong>
         <ol style="">
           <li>Problem must be convex.</li>
         </ol>
+        -->
   </small>
       </td>
     </tr>
   </tfoot>
 
+
   <tbody>
     <tr>
       <th><a href="https://github.com/JuliaOpt/JuMP.jl">JuMP</a></th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td>&#10004;</td> <!-- MISOCP -->
-      <td>&#10004;</td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td>&#10004;</td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
-      <th><a href="https://github.com/cvxgrp/Convex.jl">Convex.jl</a></th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td>&#10004;</td> <!-- MISOCP -->
-      <td>&#10004;</td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <th><a href="https://github.com/JuliaOpt/Convex.jl">Convex.jl</a></th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <thead>
       <tr>
         <th><strong>Solver</strong></th>
-        <th>LP</th>
-        <th>MILP</th>
-        <th>SOCP</th>
-        <th>MISOCP</th>
-        <th>SDP</th>
-        <th>NLP</th>
-        <th>MINLP</th>
-        <th>Other</th>
+        <th colspan="5"></th>
       </tr>
     </thead>
 
@@ -80,29 +72,23 @@
         <a href="https://projects.coin-or.org/Bonmin">Bonmin</a>
         <a href="https://github.com/JuliaOpt/AmplNLWriter.jl">(via AmplNLWriter.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td>&#10004;</td> <!-- MINLP -->
-      <td></td> <!-- Other -->
-    </tr>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
 
+    </tr>
     <tr>
       <th>
         <a href="https://projects.coin-or.org/Cbc">Cbc</a>
         <a href="https://github.com/JuliaOpt/Cbc.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -110,14 +96,11 @@
         <a href="https://projects.coin-or.org/Clp">Clp</a>
         <a href="https://github.com/JuliaOpt/Clp.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td></td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -125,15 +108,11 @@
         <a href="https://projects.coin-or.org/Couenne">Couenne</a>
         <a href="https://github.com/JuliaOpt/AmplNLWriter.jl">(via AmplNLWriter.jl)</a>
       </th>
-
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td>&#10004;</td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -141,14 +120,11 @@
         <a href="http://www-01.ibm.com/software/commerce/optimization/cplex-optimizer/">CPLEX</a>
         <a href="https://github.com/JuliaOpt/CPLEX.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td>&#10004;</td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td><small>IP Callbacks</small></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -156,14 +132,11 @@
         <a href="https://github.com/ifa-ethz/ecos/">ECOS</a>
         <a href="https://github.com/JuliaOpt/ECOS.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td></td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -171,14 +144,11 @@
         <a href="http://www.gnu.org/software/glpk/">GLPK</a>
         <a href="https://github.com/JuliaOpt/GLPK.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td><small>IP Callbacks</small></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -186,14 +156,11 @@
         <a href="http://www.gurobi.com">Gurobi</a>
         <a href="https://github.com/JuliaOpt/Gurobi.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td>&#10004;</td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td><small>IP Callbacks</small></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -201,14 +168,11 @@
         <a href="https://projects.coin-or.org/Ipopt">Ipopt</a>
         <a href="https://github.com/JuliaOpt/Ipopt.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td></td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -216,14 +180,11 @@
         <a href="http://artelys.com/en/optimization-tools/knitro">Artelys Knitro</a>
         <a href="https://github.com/JuliaOpt/KNITRO.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td>&#10004;</td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -231,14 +192,11 @@
         <a href="http://www.mosek.com/">Mosek</a>
         <a href="https://github.com/JuliaOpt/Mosek.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td>&#10004;</td> <!-- MISOCP -->
-      <td>&#10004;</td> <!-- SDP -->
-      <td>&#10004;<small>1</small></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -246,14 +204,11 @@
         <a href="http://ab-initio.mit.edu/nlopt">NLopt</a>
         <a href="https://github.com/JuliaOpt/NLopt.jl">(.jl)</a>
       </th>
-      <td></td> <!-- LP -->
-      <td></td> <!-- MILP -->
-      <td></td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
-      <td>&#10004;</td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td></td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
     </tr>
 
     <tr>
@@ -261,14 +216,11 @@
         <a href="https://github.com/cvxgrp/scs">SCS</a>
         <a href="https://github.com/JuliaOpt/SCS.jl">(.jl)</a>
       </th>
-      <td>&#10004;</td> <!-- LP -->
-      <td></td> <!-- MILP -->
-      <td>&#10004;</td> <!-- SOCP -->
-      <td></td> <!-- MISOCP -->
-      <td>&#10004;</td> <!-- SDP -->
-      <td></td> <!-- NLP -->
-      <td></td> <!-- MINLP -->
-      <td></td> <!-- Other -->
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
     </tr>
 
   </tbody>
