adjusting table width

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -1,25 +1,25 @@
 <table class="solvers">
   <thead>
     <tr>
-      <th width="23%"></th>
-      <th></th>
-      <th colspan="2">Convex</th>
-      <th></th>
-      <th></th>
+      <th width="22%"></th>
+      <th width="15.6%" rowspan="2">Linear / <br>Quadratic</th>
+      <th  colspan="2">Convex</th>
+      <th width="15.6%" rowspan="2">Nonconvex</th>
+      <th width="15.6%" rowspan="2">Integer</th>
     </tr>
     <tr>
       <th><strong>Modeling Tool</strong></th>
-      <th>Linear/Quadratic</th>
-      <th>Conic</th>
-      <th>Smooth</th>
-      <th>Nonconvex</th>
-      <th>Integer</th>
+      <!-- <th>Linear/Quadratic</th> -->
+      <th width="15.6%">Conic</th>
+      <th width="15.6%">Smooth</th>
+      <!-- <th>Nonconvex</th> -->
+      <!-- <th>Integer</th> -->
     </tr>
   </thead>
 
   <tfoot>
     <tr style="text-align: left">
-      <td colspan="10">
+      <td colspan="6">
         <small>
   <strong>Key:</strong>
   <ul style="list-style: none; margin-top: 5px; margin-bottom: 5px">
