--- a/css/screen.css
+++ b/css/screen.css
@@ -167,13 +167,13 @@ table.solvers th {
   background-color: #EEEEEE;
   border: 1px solid #CCCCCC;
   color: #555555;
-  padding: 8px;
+  padding: 3px 3px 3px 3px;
   text-align: center;
 }
 table.solvers td {
   border: 1px solid #CCCCCC;
-  padding: 5px 10px;
-  vertical-align: top;
+  padding: 5px 5;
+  vertical-align: middle;
 }
 
 
