--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -25,10 +25,10 @@
         <small>
         <strong>Key:</strong>
         <ul style="list-style: none; margin-top: 5px; margin-bottom: 5px">
-          <li style="margin: 0.1em 0;">Linear/Quadratic = Supports <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a> (&#10004;) possibly with the addition of quadratic objectives or constraints (&#10004;&#10004;).</li>
+          <li style="margin: 0.1em 0;">Linear/Quadratic = Supports <a href="http://en.wikipedia.org/wiki/Linear_programming">Linear Programming</a> possibly with the addition of quadratic objectives or constraints.</li>
           <li style="margin: 0.1em 0;">Convex conic = Supports <a href="http://en.wikipedia.org/wiki/Second_order_cone_programming">Second-order Cone Programming</a> or <a href="http://en.wikipedia.org/wiki/Semidefinite_programming">Semidefinite Programming</a> or exponential cones.</li>
           <li style="margin: 0.1em 0;">Convex smooth = Supports constrained derivative-based <a href="http://en.wikipedia.org/wiki/Nonlinear_programming">Nonlinear Programming</a> with convex constraints and objective functions</li>
-          <li style="margin: 0.1em 0;">Nonlinear = Supports general nonconvex nonlinear programming.</li>
+          <li style="margin: 0.1em 0;">Nonconvex = Supports general nonconvex nonlinear programming.</li>
           <li style="margin: 0.1em 0;">Integer = Supports integer-constrained variables, e.g., <a href="https://en.wikipedia.org/wiki/Integer_programming">Integer Programming</a>.</li>
           <li style="margin: 0.1em 0;">cb = Supports Integer Programming callbacks.</li>
         </ul>
