added Xpress.jl to the solver table

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -247,5 +247,19 @@
       <td>Open</td> <!-- License -->
     </tr>
 
+    <tr>
+      <th>
+        <a href="http://www.fico.com/en/products/fico-xpress-optimization-suite">FICO Xpress</a>
+        <a href="https://github.com/JuliaOpt/Xpress.jl">(.jl)</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
+      <td>Comm.<sup>a</sup></td> <!-- License -->
+    </tr>
+
+
   </tbody>
 </table>
