Add CSDP in solvers table

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -121,6 +121,19 @@
 
     <tr>
       <th>
+        <a href="https://projects.coin-or.org/Csdp/">CSDP</a>
+        <a href="https://github.com/JuliaOpt/CSDP.jl">(.jl)</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
+      <td>Open</td> <!-- License -->
+    </tr>
+
+    <tr>
+      <th>
         <a href="https://github.com/ifa-ethz/ecos/">ECOS</a>
         <a href="https://github.com/JuliaOpt/ECOS.jl">(.jl)</a>
       </th>
