Add CDD in solvers table

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -81,6 +81,19 @@
 
     <tr>
       <th>
+        <a href="https://www.inf.ethz.ch/personal/fukudak/cdd_home/">CDD</a>
+        <a href="https://github.com/JuliaPolyhedra/CDDLib.jl">(.jl)</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
+      <td>Open</td> <!-- License -->
+    </tr>
+
+    <tr>
+      <th>
         <a href="https://projects.coin-or.org/Clp">Clp</a>
         <a href="https://github.com/JuliaOpt/Clp.jl">(.jl)</a>
       </th>
