add table row for SCIP

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -305,10 +305,18 @@
       <td>Comm.</td> <!-- License -->
     </tr>
 
-
-
-
-
+    <tr>
+      <th>
+        <a href="http://scip.zib.de/">SCIP</a>
+        <a href="https://github.com/SCIP-Interfaces/SCIP.jl">(.jl)</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td>&#10004;</td> <!-- Nonconvex -->
+      <td>&#10004;<sup>cb</sup></td> <!-- Integer -->
+      <td>Comm.<sup>a</sup></td> <!-- License -->
+    </tr>
 
   </tbody>
 </table>
