add checkmark for "conic"

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -311,7 +311,7 @@
         <a href="https://github.com/SCIP-Interfaces/SCIP.jl">(.jl)</a>
       </th>
       <td>&#10004;</td> <!-- Linear/Quadratic -->
-      <td></td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex conic -->
       <td>&#10004;</td> <!-- Convex smooth -->
       <td>&#10004;</td> <!-- Nonconvex -->
       <td>&#10004;<sup>cb</sup></td> <!-- Integer -->
