list pajarito in solver table

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -226,6 +226,17 @@
       <td>Comm.<sup>a</sup></td> <!-- License -->
     </tr>
 
+    <tr>
+      <th>
+        <a href="https://github.com/JuliaOpt/Pajarito.jl">Pajarito.jl</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td>&#10004;</td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td>&#10004;</td> <!-- Integer -->
+      <td>Open</td> <!-- License -->
+    </tr>
 
 
     <tr>
