Add SDPA to solvers table

--- a/_includes/solver-tables.html
+++ b/_includes/solver-tables.html
@@ -173,6 +173,19 @@
 
     <tr>
       <th>
+        <a href="http://sdpa.sourceforge.net/">SDPA</a>
+        <a href="https://github.com/blegat/SDPA.jl">(.jl)</a>
+      </th>
+      <td>&#10004;</td> <!-- Linear/Quadratic -->
+      <td>&#10004;</td> <!-- Convex conic -->
+      <td></td> <!-- Convex smooth -->
+      <td></td> <!-- Nonconvex -->
+      <td></td> <!-- Integer -->
+      <td>Open</td> <!-- License -->
+    </tr>
+
+    <tr>
+      <th>
         <a href="http://www-01.ibm.com/software/commerce/optimization/cplex-optimizer/">CPLEX</a>
         <a href="https://github.com/JuliaOpt/CPLEX.jl">(.jl)</a>
       </th>
